Fix code review issues and add metadata download

--- a/jaggeryapps/dashboard/css/styles.css
+++ b/jaggeryapps/dashboard/css/styles.css
@@ -90,6 +90,11 @@ body {
     top: 73px;
     z-index: 99;
 }
+.form-listing {
+    position: relative;
+    top: 200px;
+    z-index: 99;
+}
 .gadget-body{
     top: 150px;
     position: relative;
