Adding new control to list visible roles - support auto-suggest

--- a/jaggeryapps/dashboard/css/styles.css
+++ b/jaggeryapps/dashboard/css/styles.css
@@ -3316,3 +3316,5 @@ table.dataTable .subtable th, table.dataTable .subtable td{
 .custom-checkbox-white:checked{
     background-color: #FFFFFF;
 }
+.select2-container {color: #333;width: 100% !important;}
+.select2-container input {width: 100% !important;}
