--- a/jaggeryapps/dashboard/css/styles.css
+++ b/jaggeryapps/dashboard/css/styles.css
@@ -2474,6 +2474,9 @@ th.hide-column-data, td.hide-column-data {
     border: none;
     z-index: 10;
 }
+.input-group-btn-check {
+    vertical-align: top;
+}
 .btn-gray{
     color: #fff;
     background-color: #464646;
