--- a/jaggeryapps/dashboard/css/styles.css
+++ b/jaggeryapps/dashboard/css/styles.css
@@ -970,12 +970,12 @@ a.btn-action {
     border-left: 4px solid;
 }
 .noti-success {
-    color: #40d47e;
-    border-left-color: #40d47e;
+    color: #5cb85c;
+    border-left-color: #5cb85c;
 }
 .noti-warning {
-    color: #f39c12;
-    border-left-color: #f39c12;
+    color: #f0ad4e;
+    border-left-color: #f0ad4e;
 }
 .noti-error {
     color: #e74c3c;
@@ -3470,6 +3470,19 @@ table tbody tr:nth-child(even) {
 .alert-connect {
     font-size: 16px;
     line-height: 3em;
+}
+
+.connection-block {
+    padding-top: 40px;
+    padding-bottom: 65px;
+}
+
+.help-note {
+    display: block;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    color: #cac8c8;
+    font-style: italic;
 }
 .search-margin{
     margin-top: 40px;
