--- a/jaggeryapps/admin/css/styles.css
+++ b/jaggeryapps/admin/css/styles.css
@@ -1532,6 +1532,26 @@ svg .outer {
     font-weight: 500;
 }
 
+.form-group label.warning{
+    line-height: 1.5em;
+    color: rgb(255, 255, 255) !important;
+    background-color: #f0ad4e;
+    width: 100%;
+    padding: 5px 10px;
+    border-left: 5px solid #F09436;
+    font-weight: 500;
+}
+
+.form-group label.success {
+    line-height: 1.5em;
+    color: rgb(255, 255, 255) !important;
+    background-color: #5cb85c;
+    width: 100%;
+    padding: 5px 10px;
+    border-left: 5px solid #428342;
+    font-weight: 500;
+}
+
 .loading-overlay {
     width: 98%;
     top: 14px;
