--- a/jaggeryapps/admin/css/styles.css
+++ b/jaggeryapps/admin/css/styles.css
@@ -1325,7 +1325,10 @@ svg .outer {
 .block-msg{
     background-color: #464646;
     font-size: 1em;
-    padding: 15px;
+    padding: 30px 15px;
+}
+.block-msg a {
+    text-decoration: none;
 }
 .block-action-button {
     width: 100%;
@@ -3486,7 +3489,10 @@ table tbody tr:nth-child(even) {
     padding-top: 40px;
     padding-bottom: 65px;
 }
-
+.connection-check {
+    display: inline-block;
+    margin-right: 30px;
+}
 .help-note {
     display: block;
     margin-top: 5px;
