Change sample edit page message

--- a/jaggeryapps/admin/css/styles.css
+++ b/jaggeryapps/admin/css/styles.css
@@ -1707,6 +1707,9 @@ svg .outer {
     padding-bottom: 3px;
     margin-right: 5px;
 }
+.message-info a{
+    color: #009DA7;
+}
 /* ========================================================================
  * loading styles
  * ======================================================================== */
