Enabling PKCE  options only when 'Code' grant is selected.

--- a/jaggeryapps/admin/css/styles.css
+++ b/jaggeryapps/admin/css/styles.css
@@ -3539,8 +3539,6 @@ table.dataTable .subtable th, table.dataTable .subtable td{
 }
 .help-note {
     display: block;
-    margin-top: 5px;
-    margin-bottom: 10px;
     color: #cac8c8;
     font-style: italic;
 }
@@ -3633,4 +3631,10 @@ td, th {
 }
 .btn-content {
     font-size: 18px;
+}
+.text-white {
+    color: #fff;
+}
+#oauthConfig .panel-body {
+    padding-top: 0;
 }
