--- a/jaggeryapps/admin/css/styles.css
+++ b/jaggeryapps/admin/css/styles.css
@@ -3765,3 +3765,6 @@ td, th {
     background-color: #282828;
     color: white;
 }
+#storeconfig .select2-container .select2-selection--multiple {
+    height: auto;
+}
