--- a/jaggeryapps/admin/css/styles.css
+++ b/jaggeryapps/admin/css/styles.css
@@ -27,7 +27,7 @@ body {
 }
 .cloud-container {
     position: relative;
-    top: 125px;
+    top: 104px;
 }
 .cloud-menu {
     background-color: #151515;
@@ -3662,7 +3662,6 @@ td, th {
     height: 35px;
     color: #444;
     border-bottom: 1px solid #b3b3b3;
-    word-break: break-all;
 }
 .security-type-table table th {
     background-color: #b3b3b3;
@@ -3695,7 +3694,7 @@ td, th {
     border-color: transparent;
 }
 .delete-col{
-    width: 10%;
+    width: 15%;
 }
 .delete-link{
     color:#666;
@@ -3712,4 +3711,7 @@ td, th {
 }
 .header-top{
     margin-top: 20px !important;
+}
+.word-break {
+    word-break: break-all;
 }
