--- a/jaggeryapps/admin/css/styles.css
+++ b/jaggeryapps/admin/css/styles.css
@@ -1022,7 +1022,7 @@ a.btn-action {
     padding-bottom: 100px;
 }
 .left-pane ul {
-    margin-top: 70px;
+    margin-top: 52px;
     list-style: none;
     padding-left: 0;
     -webkit-margin-after: 0em;
@@ -1052,19 +1052,21 @@ a.btn-action {
     background-color: #1b1b1b;
 }
 .left-pane ul li.active a{
-    color: #0498d5;
+    color: #fff;
 }
 .left-pane a{
     color: #fff;
     display: block;
-    padding: 16px 22px 18px;
+    padding: 16px 22px 12px;
 }
 
 .left-pane a:hover{
     color: #fff;
     text-decoration: none;
 }
-
+.left-pane li.active {
+    background-color: #171717;
+}
 .block-anch:hover{
     text-decoration: none;
     cursor: pointer;
@@ -3609,7 +3611,7 @@ table.dataTable .subtable th, table.dataTable .subtable td{
     margin-top: 12px;
 }
 .sample {
-    opacity: 0.6;
+    opacity: 0.9;
 }
 .note-container {
     background-color: #333333;
