Adding user portal custom theming support

--- a/jaggeryapps/admin/css/styles.css
+++ b/jaggeryapps/admin/css/styles.css
@@ -3826,3 +3826,6 @@ a.disabled {
 .btn-action-secondary:hover{
     background-color: #242424;
 }
+.file-upload-control input[type=file] {
+    display: none;
+}
