--- a/jaggeryapps/admin/css/styles.css
+++ b/jaggeryapps/admin/css/styles.css
@@ -927,8 +927,8 @@ a.btn-action {
     position: absolute;
     color:#fff;
     bottom: 0;
-    padding: 9px 5px 2px;
-    width: 98%;
+    padding: 12px 5px 2px;
+    width: 100%;
     min-height: 3em;
     font-size: 17px;
     background-color: #383d44;
@@ -1132,11 +1132,9 @@ a.btn-action {
 
 .block-general {
     margin-top: 1em;
-    /*background-color: #34495e;*/
     background-color: #2f343a;
     padding-top: 1em;
     padding-bottom: 1em;
-    min-height: 33em;
 }
 
 .block-general a, .block-team a, .block-database a, .block-default a,.block-apis a{
@@ -1369,7 +1367,6 @@ svg .outer {
 }
 .block-life-cycle {
     background-color: #2f343a;
-    min-height: 24em;
 }
 
 .block-repos {
@@ -1391,16 +1388,20 @@ svg .outer {
 .block-msg{
     background-color: #464646;
     font-size: 1em;
-    padding: 30px 15px;
+    padding: 15px 15px;
 }
 .block-msg a {
     text-decoration: none;
 }
+.block-msg .user-dir:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
 .block-action-button {
-    width: 100%;
-    margin-top:10px;
-    text-align: right;
-    float: right;
+    /* width: 100%; */
+    margin-top: 10px;
+    /* text-align: right; */
+    /* float: right; */
     padding: 8px;
     cursor: pointer;
     background-color: #383d44;
@@ -1420,6 +1421,8 @@ svg .outer {
 }
 .block-text {
     font-size: 40px;
+    margin-left: -5px;
+    font-weight: 300;
 }
 .block-number-sm {
     font-size: 4em;
@@ -1458,9 +1461,6 @@ svg .outer {
 }
 .btn-create-version:hover {
     background-color: rgb(29, 42, 56);
-}
-.block-life-cycle .block-action-button {
-    width: 100%;
 }
 .block-life-cycle .block-action-button:hover {
     background-color: #424850;
@@ -3597,7 +3597,7 @@ table.dataTable .subtable th, table.dataTable .subtable td{
 .connection-status, .config-details{
     font-size: 18px;
     font-weight: 400;
-    margin-right: 30px;
+    margin-right: 25px;
 }
 
 .connection-block {
@@ -3793,8 +3793,20 @@ a.disabled {
 .add-padding-top-3x {
     padding-top: 15px !important;
 }
+.add-padding-right-5x {
+    padding-right: 25px !important;
+}
+.add-padding-left-5x {
+    padding-left: 25px !important;
+}
+.add-margin-right-2x{
+    margin-right: 10px !important;
+}
 .remove-padding-right {
     padding-right: 0px !important;
+}
+.remove-padding-left {
+    padding-left: 0px !important;
 }
 .app-color-one-dark {
     background-color: #414141;
@@ -3828,4 +3840,41 @@ a.disabled {
 }
 .file-upload-control input[type=file] {
     display: none;
+}
+.text-viewAll{
+    position:absolute;
+    top:-8%;
+    left:0;
+    width:100%;
+    height:100%;
+    text-align:center;
+    z-index: 1;
+}
+.text-viewAll:after{
+    content:'';
+    width:1px;
+    height:100%;
+    vertical-align:middle;
+    display:inline-block;
+}
+.text-viewAll span{
+    vertical-align:middle;
+    font-size: 56px;
+    font-weight: 400;
+}
+.view-all .app-icon {
+    background: #2a2f35;
+}
+.secondary-link {
+    color: #c5c5c5;
+    font-size: 14px;
+
+    padding-left: 10px;
+}
+.secondary-link:hover {
+    text-decoration: underline;
+    color: #eee;
+}
+.v-ruler{
+    border-left: 2px solid #777;
 }
