--- a/jaggeryapps/admin/css/styles.css
+++ b/jaggeryapps/admin/css/styles.css
@@ -3629,7 +3629,7 @@ table.dataTable .subtable th, table.dataTable .subtable td{
     padding-bottom: 8px;
 }
 .steps-text {
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 300;
 }
 .conf-guide ul {
@@ -3880,6 +3880,10 @@ a.disabled {
 }
 .v-ruler{
     border-left: 2px solid #777;
+}
+
+#connection-popup-modal .fw-loader5{
+    margin-top: -40px;
 }
 
 .description-block {
